--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
    
 }
 .text-intro {
-    width: 400px;
+    width: 800px;
     font-size: 1.5em;
     margin: 0 auto
      
@@ -26,4 +26,14 @@ header {
     justify-content: flex-start;
     width: 100%;
     align-items: center
+}
+
+.container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.goals .skills {
+    padding: 20px;
+    border: 1px solid black;
 }
