--- a/style.css
+++ b/style.css
@@ -37,3 +37,8 @@ header {
     padding: 20px;
     border: 1px solid black;
 }
+.bottom {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
